--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,61 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Invarient',\n",
-       "  '1990_1992',\n",
-       "  <ee.image.Image at 0x218b4b1d978>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3acf8>),\n",
-       " ('Invarient',\n",
-       "  '1993_1995',\n",
-       "  <ee.image.Image at 0x218b4b1dac8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ad30>),\n",
-       " ('Invarient',\n",
-       "  '1996_1998',\n",
-       "  <ee.image.Image at 0x218b4b1dba8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ad68>),\n",
-       " ('Invarient',\n",
-       "  '1999_2001',\n",
-       "  <ee.image.Image at 0x218b4b1dc88>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ada0>),\n",
-       " ('Invarient',\n",
-       "  '2002_2004',\n",
-       "  <ee.image.Image at 0x218b4b1dd68>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3add8>),\n",
-       " ('Invarient',\n",
-       "  '2005_2007',\n",
-       "  <ee.image.Image at 0x218b4b1de48>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ae10>),\n",
-       " ('Invarient',\n",
-       "  '2008_2010',\n",
-       "  <ee.image.Image at 0x218b4b1df28>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ae48>),\n",
-       " ('Invarient',\n",
-       "  '2011_2013',\n",
-       "  <ee.image.Image at 0x218b4b1d9b0>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3ae80>),\n",
-       " ('Invarient',\n",
-       "  '2014_2016',\n",
-       "  <ee.image.Image at 0x218b4b1d9e8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3aeb8>),\n",
-       " ('Invarient',\n",
-       "  '2017_2019',\n",
-       "  <ee.image.Image at 0x218b4b24208>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x218b4b3aef0>)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Stack_img_sample"
    ]
@@ -291,21 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +471,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -959,125 +895,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_random_0_1990_1992 successful!\n",
-      "Exporting Invarient_random_1_1990_1992 successful!\n",
-      "Exporting Invarient_random_2_1990_1992 successful!\n",
-      "Exporting Invarient_random_3_1990_1992 successful!\n",
-      "Exporting Invarient_random_4_1990_1992 successful!\n",
-      "Exporting Invarient_random_5_1990_1992 successful!\n",
-      "Exporting Invarient_random_6_1990_1992 successful!\n",
-      "Exporting Invarient_random_7_1990_1992 successful!\n",
-      "Exporting Invarient_random_8_1990_1992 successful!\n",
-      "Exporting Invarient_random_9_1990_1992 successful!\n",
-      "Exporting Invarient_random_0_1993_1995 successful!\n",
-      "Exporting Invarient_random_1_1993_1995 successful!\n",
-      "Exporting Invarient_random_2_1993_1995 successful!\n",
-      "Exporting Invarient_random_3_1993_1995 successful!\n",
-      "Exporting Invarient_random_4_1993_1995 successful!\n",
-      "Exporting Invarient_random_5_1993_1995 successful!\n",
-      "Exporting Invarient_random_6_1993_1995 successful!\n",
-      "Exporting Invarient_random_7_1993_1995 successful!\n",
-      "Exporting Invarient_random_8_1993_1995 successful!\n",
-      "Exporting Invarient_random_9_1993_1995 successful!\n",
-      "Exporting Invarient_random_0_1996_1998 successful!\n",
-      "Exporting Invarient_random_1_1996_1998 successful!\n",
-      "Exporting Invarient_random_2_1996_1998 successful!\n",
-      "Exporting Invarient_random_3_1996_1998 successful!\n",
-      "Exporting Invarient_random_4_1996_1998 successful!\n",
-      "Exporting Invarient_random_5_1996_1998 successful!\n",
-      "Exporting Invarient_random_6_1996_1998 successful!\n",
-      "Exporting Invarient_random_7_1996_1998 successful!\n",
-      "Exporting Invarient_random_8_1996_1998 successful!\n",
-      "Exporting Invarient_random_9_1996_1998 successful!\n",
-      "Exporting Invarient_random_0_1999_2001 successful!\n",
-      "Exporting Invarient_random_1_1999_2001 successful!\n",
-      "Exporting Invarient_random_2_1999_2001 successful!\n",
-      "Exporting Invarient_random_3_1999_2001 successful!\n",
-      "Exporting Invarient_random_4_1999_2001 successful!\n",
-      "Exporting Invarient_random_5_1999_2001 successful!\n",
-      "Exporting Invarient_random_6_1999_2001 successful!\n",
-      "Exporting Invarient_random_7_1999_2001 successful!\n",
-      "Exporting Invarient_random_8_1999_2001 successful!\n",
-      "Exporting Invarient_random_9_1999_2001 successful!\n",
-      "Exporting Invarient_random_0_2002_2004 successful!\n",
-      "Exporting Invarient_random_1_2002_2004 successful!\n",
-      "Exporting Invarient_random_2_2002_2004 successful!\n",
-      "Exporting Invarient_random_3_2002_2004 successful!\n",
-      "Exporting Invarient_random_4_2002_2004 successful!\n",
-      "Exporting Invarient_random_5_2002_2004 successful!\n",
-      "Exporting Invarient_random_6_2002_2004 successful!\n",
-      "Exporting Invarient_random_7_2002_2004 successful!\n",
-      "Exporting Invarient_random_8_2002_2004 successful!\n",
-      "Exporting Invarient_random_9_2002_2004 successful!\n",
-      "Exporting Invarient_random_0_2005_2007 successful!\n",
-      "Exporting Invarient_random_1_2005_2007 successful!\n",
-      "Exporting Invarient_random_2_2005_2007 successful!\n",
-      "Exporting Invarient_random_3_2005_2007 successful!\n",
-      "Exporting Invarient_random_4_2005_2007 successful!\n",
-      "Exporting Invarient_random_5_2005_2007 successful!\n",
-      "Exporting Invarient_random_6_2005_2007 successful!\n",
-      "Exporting Invarient_random_7_2005_2007 successful!\n",
-      "Exporting Invarient_random_8_2005_2007 successful!\n",
-      "Exporting Invarient_random_9_2005_2007 successful!\n",
-      "Exporting Invarient_random_0_2008_2010 successful!\n",
-      "Exporting Invarient_random_1_2008_2010 successful!\n",
-      "Exporting Invarient_random_2_2008_2010 successful!\n",
-      "Exporting Invarient_random_3_2008_2010 successful!\n",
-      "Exporting Invarient_random_4_2008_2010 successful!\n",
-      "Exporting Invarient_random_5_2008_2010 successful!\n",
-      "Exporting Invarient_random_6_2008_2010 successful!\n",
-      "Exporting Invarient_random_7_2008_2010 successful!\n",
-      "Exporting Invarient_random_8_2008_2010 successful!\n",
-      "Exporting Invarient_random_9_2008_2010 successful!\n",
-      "Exporting Invarient_random_0_2011_2013 successful!\n",
-      "Exporting Invarient_random_1_2011_2013 successful!\n",
-      "Exporting Invarient_random_2_2011_2013 successful!\n",
-      "Exporting Invarient_random_3_2011_2013 successful!\n",
-      "Exporting Invarient_random_4_2011_2013 successful!\n",
-      "Exporting Invarient_random_5_2011_2013 successful!\n",
-      "Exporting Invarient_random_6_2011_2013 successful!\n",
-      "Exporting Invarient_random_7_2011_2013 successful!\n",
-      "Exporting Invarient_random_8_2011_2013 successful!\n",
-      "Exporting Invarient_random_9_2011_2013 successful!\n",
-      "Exporting Invarient_random_0_2014_2016 successful!\n",
-      "Exporting Invarient_random_1_2014_2016 successful!\n",
-      "Exporting Invarient_random_2_2014_2016 successful!\n",
-      "Exporting Invarient_random_3_2014_2016 successful!\n",
-      "Exporting Invarient_random_4_2014_2016 successful!\n",
-      "Exporting Invarient_random_5_2014_2016 successful!\n",
-      "Exporting Invarient_random_6_2014_2016 successful!\n",
-      "Exporting Invarient_random_7_2014_2016 successful!\n",
-      "Exporting Invarient_random_8_2014_2016 successful!\n",
-      "Exporting Invarient_random_9_2014_2016 successful!\n",
-      "Exporting Invarient_random_0_2017_2019 successful!\n",
-      "Exporting Invarient_random_1_2017_2019 successful!\n",
-      "Exporting Invarient_random_2_2017_2019 successful!\n",
-      "Exporting Invarient_random_3_2017_2019 successful!\n",
-      "Exporting Invarient_random_4_2017_2019 successful!\n",
-      "Exporting Invarient_random_5_2017_2019 successful!\n",
-      "Exporting Invarient_random_6_2017_2019 successful!\n",
-      "Exporting Invarient_random_7_2017_2019 successful!\n",
-      "Exporting Invarient_random_8_2017_2019 successful!\n",
-      "Exporting Invarient_random_9_2017_2019 successful!\n"
+      "Exporting Invarient_1990_1992_random_0 successful!\n",
+      "Exporting Invarient_1990_1992_random_1 successful!\n",
+      "Exporting Invarient_1990_1992_random_2 successful!\n",
+      "Exporting Invarient_1990_1992_random_3 successful!\n",
+      "Exporting Invarient_1990_1992_random_4 successful!\n",
+      "Exporting Invarient_1990_1992_random_5 successful!\n",
+      "Exporting Invarient_1990_1992_random_6 successful!\n",
+      "Exporting Invarient_1990_1992_random_7 successful!\n",
+      "Exporting Invarient_1990_1992_random_8 successful!\n",
+      "Exporting Invarient_1990_1992_random_9 successful!\n",
+      "Exporting Invarient_1993_1995_random_0 successful!\n",
+      "Exporting Invarient_1993_1995_random_1 successful!\n",
+      "Exporting Invarient_1993_1995_random_2 successful!\n",
+      "Exporting Invarient_1993_1995_random_3 successful!\n",
+      "Exporting Invarient_1993_1995_random_4 successful!\n",
+      "Exporting Invarient_1993_1995_random_5 successful!\n",
+      "Exporting Invarient_1993_1995_random_6 successful!\n",
+      "Exporting Invarient_1993_1995_random_7 successful!\n",
+      "Exporting Invarient_1993_1995_random_8 successful!\n",
+      "Exporting Invarient_1993_1995_random_9 successful!\n",
+      "Exporting Invarient_1996_1998_random_0 successful!\n",
+      "Exporting Invarient_1996_1998_random_1 successful!\n",
+      "Exporting Invarient_1996_1998_random_2 successful!\n",
+      "Exporting Invarient_1996_1998_random_3 successful!\n",
+      "Exporting Invarient_1996_1998_random_4 successful!\n",
+      "Exporting Invarient_1996_1998_random_5 successful!\n",
+      "Exporting Invarient_1996_1998_random_6 successful!\n",
+      "Exporting Invarient_1996_1998_random_7 successful!\n",
+      "Exporting Invarient_1996_1998_random_8 successful!\n",
+      "Exporting Invarient_1996_1998_random_9 successful!\n",
+      "Exporting Invarient_1999_2001_random_0 successful!\n",
+      "Exporting Invarient_1999_2001_random_1 successful!\n",
+      "Exporting Invarient_1999_2001_random_2 successful!\n",
+      "Exporting Invarient_1999_2001_random_3 successful!\n",
+      "Exporting Invarient_1999_2001_random_4 successful!\n",
+      "Exporting Invarient_1999_2001_random_5 successful!\n",
+      "Exporting Invarient_1999_2001_random_6 successful!\n",
+      "Exporting Invarient_1999_2001_random_7 successful!\n",
+      "Exporting Invarient_1999_2001_random_8 successful!\n",
+      "Exporting Invarient_1999_2001_random_9 successful!\n",
+      "Exporting Invarient_2002_2004_random_0 successful!\n",
+      "Exporting Invarient_2002_2004_random_1 successful!\n",
+      "Exporting Invarient_2002_2004_random_2 successful!\n",
+      "Exporting Invarient_2002_2004_random_3 successful!\n",
+      "Exporting Invarient_2002_2004_random_4 successful!\n",
+      "Exporting Invarient_2002_2004_random_5 successful!\n",
+      "Exporting Invarient_2002_2004_random_6 successful!\n",
+      "Exporting Invarient_2002_2004_random_7 successful!\n",
+      "Exporting Invarient_2002_2004_random_8 successful!\n",
+      "Exporting Invarient_2002_2004_random_9 successful!\n",
+      "Exporting Invarient_2005_2007_random_0 successful!\n",
+      "Exporting Invarient_2005_2007_random_1 successful!\n",
+      "Exporting Invarient_2005_2007_random_2 successful!\n",
+      "Exporting Invarient_2005_2007_random_3 successful!\n",
+      "Exporting Invarient_2005_2007_random_4 successful!\n",
+      "Exporting Invarient_2005_2007_random_5 successful!\n",
+      "Exporting Invarient_2005_2007_random_6 successful!\n",
+      "Exporting Invarient_2005_2007_random_7 successful!\n",
+      "Exporting Invarient_2005_2007_random_8 successful!\n",
+      "Exporting Invarient_2005_2007_random_9 successful!\n",
+      "Exporting Invarient_2008_2010_random_0 successful!\n",
+      "Exporting Invarient_2008_2010_random_1 successful!\n",
+      "Exporting Invarient_2008_2010_random_2 successful!\n",
+      "Exporting Invarient_2008_2010_random_3 successful!\n",
+      "Exporting Invarient_2008_2010_random_4 successful!\n",
+      "Exporting Invarient_2008_2010_random_5 successful!\n",
+      "Exporting Invarient_2008_2010_random_6 successful!\n",
+      "Exporting Invarient_2008_2010_random_7 successful!\n",
+      "Exporting Invarient_2008_2010_random_8 successful!\n",
+      "Exporting Invarient_2008_2010_random_9 successful!\n",
+      "Exporting Invarient_2011_2013_random_0 successful!\n",
+      "Exporting Invarient_2011_2013_random_1 successful!\n",
+      "Exporting Invarient_2011_2013_random_2 successful!\n",
+      "Exporting Invarient_2011_2013_random_3 successful!\n",
+      "Exporting Invarient_2011_2013_random_4 successful!\n",
+      "Exporting Invarient_2011_2013_random_5 successful!\n",
+      "Exporting Invarient_2011_2013_random_6 successful!\n",
+      "Exporting Invarient_2011_2013_random_7 successful!\n",
+      "Exporting Invarient_2011_2013_random_8 successful!\n",
+      "Exporting Invarient_2011_2013_random_9 successful!\n",
+      "Exporting Invarient_2014_2016_random_0 successful!\n",
+      "Exporting Invarient_2014_2016_random_1 successful!\n",
+      "Exporting Invarient_2014_2016_random_2 successful!\n",
+      "Exporting Invarient_2014_2016_random_3 successful!\n",
+      "Exporting Invarient_2014_2016_random_4 successful!\n",
+      "Exporting Invarient_2014_2016_random_5 successful!\n",
+      "Exporting Invarient_2014_2016_random_6 successful!\n",
+      "Exporting Invarient_2014_2016_random_7 successful!\n",
+      "Exporting Invarient_2014_2016_random_8 successful!\n",
+      "Exporting Invarient_2014_2016_random_9 successful!\n",
+      "Exporting Invarient_2017_2019_random_0 successful!\n",
+      "Exporting Invarient_2017_2019_random_1 successful!\n",
+      "Exporting Invarient_2017_2019_random_2 successful!\n",
+      "Exporting Invarient_2017_2019_random_3 successful!\n",
+      "Exporting Invarient_2017_2019_random_4 successful!\n",
+      "Exporting Invarient_2017_2019_random_5 successful!\n",
+      "Exporting Invarient_2017_2019_random_6 successful!\n",
+      "Exporting Invarient_2017_2019_random_7 successful!\n",
+      "Exporting Invarient_2017_2019_random_8 successful!\n",
+      "Exporting Invarient_2017_2019_random_9 successful!\n"
      ]
     }
    ],
    "source": [
     "for item in Classificatioin_result:\n",
-    "    \n",
-    "    asset_path = 'users/wangjinzhulala/North_China_Plain_Python/classification_img'\n",
-    "    \n",
+    "     \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
     "    seed = item[2]\n",
     "    img  = item[3]\n",
     "    \n",
     "    \n",
-    "    export_name = f'{Classification_type}_random_{seed}_{year}'\n",
+    "    export_name = f'{Classification_type}_{year}_random_{seed}'\n",
     "    \n",
     "#     task = ee.batch.Export.image.toCloudStorage(image          = img,\n",
     "#                                                 description    = export_name,\n",
-    "#                                                 bucket         = 'north_china_plain',\n",
+    "#                                                 bucket         = 'north_china_plain/Classification_Invarient',\n",
     "#                                                 fileNamePrefix = export_name,\n",
     "#                                                 region         = North_China_Plain.geometry().bounds(),\n",
     "#                                                 scale          = 30,\n",
@@ -1087,13 +1021,6 @@
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
