Extract img values to NDBI_gte_5 sample

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "# Get the training sample\n",
-    "Invarient_training_sample = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Traning_Sample\")"
+    "Invarient_training_sample = ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Full_training_pt/Traning_Sample_NDBI_gte_5\")"
    ]
   },
   {
@@ -277,16 +277,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invarient_ext_Img_1990_1992\n",
-      "Invarient_ext_Img_1993_1995\n",
-      "Invarient_ext_Img_1996_1998\n",
-      "Invarient_ext_Img_1999_2001\n",
-      "Invarient_ext_Img_2002_2004\n",
-      "Invarient_ext_Img_2005_2007\n",
-      "Invarient_ext_Img_2008_2010\n",
-      "Invarient_ext_Img_2011_2013\n",
-      "Invarient_ext_Img_2014_2016\n",
-      "Invarient_ext_Img_2017_2019\n"
+      "Invarient_ext_Img_NDBI_gte_5_1990_1992\n",
+      "Invarient_ext_Img_NDBI_gte_5_1993_1995\n",
+      "Invarient_ext_Img_NDBI_gte_5_1996_1998\n",
+      "Invarient_ext_Img_NDBI_gte_5_1999_2001\n",
+      "Invarient_ext_Img_NDBI_gte_5_2002_2004\n",
+      "Invarient_ext_Img_NDBI_gte_5_2005_2007\n",
+      "Invarient_ext_Img_NDBI_gte_5_2008_2010\n",
+      "Invarient_ext_Img_NDBI_gte_5_2011_2013\n",
+      "Invarient_ext_Img_NDBI_gte_5_2014_2016\n",
+      "Invarient_ext_Img_NDBI_gte_5_2017_2019\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
     "\n",
     "for year,img in list(zip(year_name,Stack_img)):\n",
     "    \n",
-    "    name = 'Invarient_ext_Img'\n",
+    "    name = 'Invarient_ext_Img_NDBI_gte_5'\n",
     "    \n",
     "    Ext_sample = img.sampleRegions(collection  = Invarient_training_sample, \n",
     "                                    properties = ['Built'], \n",
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
