--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
@@ -317,44 +317,44 @@
       "text/plain": [
        "[('Invarient',\n",
        "  '1990_1992',\n",
-       "  <ee.image.Image at 0x1ba1c8f63c8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c8d69b0>),\n",
+       "  <ee.image.Image at 0x7f8b4c971518>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c971160>),\n",
        " ('Invarient',\n",
        "  '1993_1995',\n",
-       "  <ee.image.Image at 0x1ba1c8f6e80>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c8d6c18>),\n",
+       "  <ee.image.Image at 0x7f8b4c971ba8>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9710b8>),\n",
        " ('Invarient',\n",
        "  '1996_1998',\n",
-       "  <ee.image.Image at 0x1ba1c8f65c0>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1b52fac8>),\n",
+       "  <ee.image.Image at 0x7f8b4c971b70>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c971278>),\n",
        " ('Invarient',\n",
        "  '1999_2001',\n",
-       "  <ee.image.Image at 0x1ba1c8f6f28>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1b52f128>),\n",
+       "  <ee.image.Image at 0x7f8b4c971fd0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b70790940>),\n",
        " ('Invarient',\n",
        "  '2002_2004',\n",
-       "  <ee.image.Image at 0x1ba1c8f6c50>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904198>),\n",
+       "  <ee.image.Image at 0x7f8b4c971e80>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e4048>),\n",
        " ('Invarient',\n",
        "  '2005_2007',\n",
-       "  <ee.image.Image at 0x1ba1c8f6e10>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c9040f0>),\n",
+       "  <ee.image.Image at 0x7f8b4c9712e8>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e4748>),\n",
        " ('Invarient',\n",
        "  '2008_2010',\n",
-       "  <ee.image.Image at 0x1ba1b5263c8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904080>),\n",
+       "  <ee.image.Image at 0x7f8b4c971048>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e49e8>),\n",
        " ('Invarient',\n",
        "  '2011_2013',\n",
-       "  <ee.image.Image at 0x1ba1c8f6c18>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904f98>),\n",
+       "  <ee.image.Image at 0x7f8b4c971630>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e4780>),\n",
        " ('Invarient',\n",
        "  '2014_2016',\n",
-       "  <ee.image.Image at 0x1ba1b4f7400>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904048>),\n",
+       "  <ee.image.Image at 0x7f8b4c971c50>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e4630>),\n",
        " ('Invarient',\n",
        "  '2017_2019',\n",
-       "  <ee.image.Image at 0x1ba073d3a20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904128>)]"
+       "  <ee.image.Image at 0x7f8b4c971080>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x7f8b4c9e42b0>)]"
       ]
      },
      "execution_count": 12,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1136,106 +1136,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_1990_1992_random_0 successful!\n",
-      "Exporting Invarient_1990_1992_random_1 successful!\n",
-      "Exporting Invarient_1990_1992_random_2 successful!\n",
-      "Exporting Invarient_1990_1992_random_3 successful!\n",
-      "Exporting Invarient_1990_1992_random_4 successful!\n",
-      "Exporting Invarient_1990_1992_random_5 successful!\n",
-      "Exporting Invarient_1990_1992_random_6 successful!\n",
-      "Exporting Invarient_1990_1992_random_7 successful!\n",
-      "Exporting Invarient_1990_1992_random_8 successful!\n",
-      "Exporting Invarient_1990_1992_random_9 successful!\n",
-      "Exporting Invarient_1993_1995_random_0 successful!\n",
-      "Exporting Invarient_1993_1995_random_1 successful!\n",
-      "Exporting Invarient_1993_1995_random_2 successful!\n",
-      "Exporting Invarient_1993_1995_random_3 successful!\n",
-      "Exporting Invarient_1993_1995_random_4 successful!\n",
-      "Exporting Invarient_1993_1995_random_5 successful!\n",
-      "Exporting Invarient_1993_1995_random_6 successful!\n",
-      "Exporting Invarient_1993_1995_random_7 successful!\n",
-      "Exporting Invarient_1993_1995_random_8 successful!\n",
-      "Exporting Invarient_1993_1995_random_9 successful!\n",
-      "Exporting Invarient_1996_1998_random_0 successful!\n",
-      "Exporting Invarient_1996_1998_random_1 successful!\n",
-      "Exporting Invarient_1996_1998_random_2 successful!\n",
-      "Exporting Invarient_1996_1998_random_3 successful!\n",
-      "Exporting Invarient_1996_1998_random_4 successful!\n",
-      "Exporting Invarient_1996_1998_random_5 successful!\n",
-      "Exporting Invarient_1996_1998_random_6 successful!\n",
-      "Exporting Invarient_1996_1998_random_7 successful!\n",
-      "Exporting Invarient_1996_1998_random_8 successful!\n",
-      "Exporting Invarient_1996_1998_random_9 successful!\n",
-      "Exporting Invarient_1999_2001_random_0 successful!\n",
-      "Exporting Invarient_1999_2001_random_1 successful!\n",
-      "Exporting Invarient_1999_2001_random_2 successful!\n",
-      "Exporting Invarient_1999_2001_random_3 successful!\n",
-      "Exporting Invarient_1999_2001_random_4 successful!\n",
-      "Exporting Invarient_1999_2001_random_5 successful!\n",
-      "Exporting Invarient_1999_2001_random_6 successful!\n",
-      "Exporting Invarient_1999_2001_random_7 successful!\n",
-      "Exporting Invarient_1999_2001_random_8 successful!\n",
-      "Exporting Invarient_1999_2001_random_9 successful!\n",
-      "Exporting Invarient_2002_2004_random_0 successful!\n",
-      "Exporting Invarient_2002_2004_random_1 successful!\n",
-      "Exporting Invarient_2002_2004_random_2 successful!\n",
-      "Exporting Invarient_2002_2004_random_3 successful!\n",
-      "Exporting Invarient_2002_2004_random_4 successful!\n",
-      "Exporting Invarient_2002_2004_random_5 successful!\n",
-      "Exporting Invarient_2002_2004_random_6 successful!\n",
-      "Exporting Invarient_2002_2004_random_7 successful!\n",
-      "Exporting Invarient_2002_2004_random_8 successful!\n",
-      "Exporting Invarient_2002_2004_random_9 successful!\n",
-      "Exporting Invarient_2005_2007_random_0 successful!\n",
-      "Exporting Invarient_2005_2007_random_1 successful!\n",
-      "Exporting Invarient_2005_2007_random_2 successful!\n",
-      "Exporting Invarient_2005_2007_random_3 successful!\n",
-      "Exporting Invarient_2005_2007_random_4 successful!\n",
-      "Exporting Invarient_2005_2007_random_5 successful!\n",
-      "Exporting Invarient_2005_2007_random_6 successful!\n",
-      "Exporting Invarient_2005_2007_random_7 successful!\n",
-      "Exporting Invarient_2005_2007_random_8 successful!\n",
-      "Exporting Invarient_2005_2007_random_9 successful!\n",
-      "Exporting Invarient_2008_2010_random_0 successful!\n",
-      "Exporting Invarient_2008_2010_random_1 successful!\n",
-      "Exporting Invarient_2008_2010_random_2 successful!\n",
-      "Exporting Invarient_2008_2010_random_3 successful!\n",
-      "Exporting Invarient_2008_2010_random_4 successful!\n",
-      "Exporting Invarient_2008_2010_random_5 successful!\n",
-      "Exporting Invarient_2008_2010_random_6 successful!\n",
-      "Exporting Invarient_2008_2010_random_7 successful!\n",
-      "Exporting Invarient_2008_2010_random_8 successful!\n",
-      "Exporting Invarient_2008_2010_random_9 successful!\n",
-      "Exporting Invarient_2011_2013_random_0 successful!\n",
-      "Exporting Invarient_2011_2013_random_1 successful!\n",
-      "Exporting Invarient_2011_2013_random_2 successful!\n",
-      "Exporting Invarient_2011_2013_random_3 successful!\n",
-      "Exporting Invarient_2011_2013_random_4 successful!\n",
-      "Exporting Invarient_2011_2013_random_5 successful!\n",
-      "Exporting Invarient_2011_2013_random_6 successful!\n",
-      "Exporting Invarient_2011_2013_random_7 successful!\n",
-      "Exporting Invarient_2011_2013_random_8 successful!\n",
-      "Exporting Invarient_2011_2013_random_9 successful!\n",
-      "Exporting Invarient_2014_2016_random_0 successful!\n",
-      "Exporting Invarient_2014_2016_random_1 successful!\n",
-      "Exporting Invarient_2014_2016_random_2 successful!\n",
-      "Exporting Invarient_2014_2016_random_3 successful!\n",
-      "Exporting Invarient_2014_2016_random_4 successful!\n",
-      "Exporting Invarient_2014_2016_random_5 successful!\n",
-      "Exporting Invarient_2014_2016_random_6 successful!\n",
-      "Exporting Invarient_2014_2016_random_7 successful!\n",
-      "Exporting Invarient_2014_2016_random_8 successful!\n",
-      "Exporting Invarient_2014_2016_random_9 successful!\n",
-      "Exporting Invarient_2017_2019_random_0 successful!\n",
-      "Exporting Invarient_2017_2019_random_1 successful!\n",
-      "Exporting Invarient_2017_2019_random_2 successful!\n",
-      "Exporting Invarient_2017_2019_random_3 successful!\n",
-      "Exporting Invarient_2017_2019_random_4 successful!\n",
-      "Exporting Invarient_2017_2019_random_5 successful!\n",
-      "Exporting Invarient_2017_2019_random_6 successful!\n",
-      "Exporting Invarient_2017_2019_random_7 successful!\n",
-      "Exporting Invarient_2017_2019_random_8 successful!\n",
-      "Exporting Invarient_2017_2019_random_9 successful!\n"
+      "Exporting Invarient_1990_1992_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_1990_1992_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_1993_1995_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_1996_1998_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_1999_2001_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2002_2004_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2005_2007_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2008_2010_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2011_2013_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2014_2016_NDBI_gte_5_9 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_0 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_1 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_2 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_3 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_4 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_5 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_6 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_7 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_8 successful!\n",
+      "Exporting Invarient_2017_2019_NDBI_gte_5_9 successful!\n"
      ]
     }
    ],
@@ -1248,16 +1248,27 @@
     "    img  = item[3]\n",
     "    \n",
     "    \n",
-    "    export_name = f'{Classification_type}_{year}_random_{seed}'\n",
+    "    export_name = f'{Classification_type}_{year}_NDBI_gte_5_{seed}'\n",
     "    \n",
-    "    task = ee.batch.Export.image.toCloudStorage(image          = img,\n",
+    "#     # export to Google Storage\n",
+    "#     task = ee.batch.Export.image.toCloudStorage(image          = img,\n",
+    "#                                                 description    = export_name,\n",
+    "#                                                 bucket         = 'north_china_plain',\n",
+    "#                                                 fileNamePrefix = export_name,\n",
+    "#                                                 region         = North_China_Plain.geometry().bounds(),\n",
+    "#                                                 scale          = 30,\n",
+    "#                                                 maxPixels      = int(1e13),\n",
+    "#                                                 skipEmptyTiles = True)\n",
+    "    # export to GEE asset\n",
+    "    asset_path = 'users/Jinzhu_Deakin/North_China_Plain/Classified_img/NDBI_gte_5_1990_1992'\n",
+    "    \n",
+    "    task = ee.batch.Export.image.toAsset(image          = img,\n",
     "                                                description    = export_name,\n",
-    "                                                bucket         = 'north_china_plain',\n",
-    "                                                fileNamePrefix = export_name,\n",
+    "                                                assetId        = f'{asset_path}/{export_name}',\n",
     "                                                region         = North_China_Plain.geometry().bounds(),\n",
     "                                                scale          = 30,\n",
-    "                                                maxPixels      = int(1e13),\n",
-    "                                                skipEmptyTiles = True)\n",
+    "                                                maxPixels      = int(1e13)) \n",
+    "    \n",
     "    task.start()\n",
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
@@ -1549,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
