Classification using NDBI_gte_5

--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized_Climate'\n",
     "\n",
     "# Get the training sample\n",
-    "Invarient_training_sample = [ee.FeatureCollection(f\"{path}/Invarient_ext_Img_{year}\")\n",
+    "Invarient_training_sample = [ee.FeatureCollection(f\"{path}/Invarient_ext_Img_NDBI_gte_5_{year}\")\n",
     "                               for year in year_name]"
    ]
   },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -317,47 +317,47 @@
       "text/plain": [
        "[('Invarient',\n",
        "  '1990_1992',\n",
-       "  <ee.image.Image at 0x1ba1c8f63c8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c8d69b0>),\n",
+       "  <ee.image.Image at 0x1e589918080>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840ae48>),\n",
        " ('Invarient',\n",
        "  '1993_1995',\n",
-       "  <ee.image.Image at 0x1ba1c8f6e80>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c8d6c18>),\n",
+       "  <ee.image.Image at 0x1e589918fd0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a550>),\n",
        " ('Invarient',\n",
        "  '1996_1998',\n",
-       "  <ee.image.Image at 0x1ba1c8f65c0>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1b52fac8>),\n",
+       "  <ee.image.Image at 0x1e5899182b0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a2b0>),\n",
        " ('Invarient',\n",
        "  '1999_2001',\n",
-       "  <ee.image.Image at 0x1ba1c8f6f28>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1b52f128>),\n",
+       "  <ee.image.Image at 0x1e589918438>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a400>),\n",
        " ('Invarient',\n",
        "  '2002_2004',\n",
-       "  <ee.image.Image at 0x1ba1c8f6c50>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904198>),\n",
+       "  <ee.image.Image at 0x1e5899180f0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840af28>),\n",
        " ('Invarient',\n",
        "  '2005_2007',\n",
-       "  <ee.image.Image at 0x1ba1c8f6e10>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c9040f0>),\n",
+       "  <ee.image.Image at 0x1e5898d8be0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a438>),\n",
        " ('Invarient',\n",
        "  '2008_2010',\n",
-       "  <ee.image.Image at 0x1ba1b5263c8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904080>),\n",
+       "  <ee.image.Image at 0x1e5898d8da0>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a470>),\n",
        " ('Invarient',\n",
        "  '2011_2013',\n",
-       "  <ee.image.Image at 0x1ba1c8f6c18>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904f98>),\n",
+       "  <ee.image.Image at 0x1e58991f630>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a6d8>),\n",
        " ('Invarient',\n",
        "  '2014_2016',\n",
-       "  <ee.image.Image at 0x1ba1b4f7400>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904048>),\n",
+       "  <ee.image.Image at 0x1e58991f7b8>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a390>),\n",
        " ('Invarient',\n",
        "  '2017_2019',\n",
-       "  <ee.image.Image at 0x1ba073d3a20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x1ba1c904128>)]"
+       "  <ee.image.Image at 0x1e58991fe10>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x1e58840a588>)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,6 +1127,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "scrolled": true
@@ -1240,7 +1247,7 @@
     }
    ],
    "source": [
-    "for item in Classificatioin_result:\n",
+    "for item in Classificatioin_result[:4]:\n",
     "     \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
@@ -1286,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1461,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,16 +1472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ee.image.Image at 0x196794f91d0>"
+       "<ee.image.Image at 0x1e588545f60>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,13 +1500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Full_sample_classified_img = ee.ImageCollection(\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Random_1990_1992\")\\\n",
+    "                               .sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3d69d45d8194dff88aee6a8442b1a1c",
+       "model_id": "8fb4e0f846904f0391d94201a247a6df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1515,8 +1532,135 @@
     "Map = geemap.Map()\n",
     "Map.add_basemap('HYBRID')\n",
     "Map.addLayer(one,{'min':0,'max':1},'One')\n",
+    "Map.addLayer(Full_sample_classified_img,{'min':0,'max':1},'Full_sample_classified_img')\n",
     "Map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
