--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_2_Classification_random_split_10_layers.ipynb
@@ -263,7 +263,7 @@
     "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized_Climate'\n",
     "\n",
     "# Get the training sample\n",
-    "Invarient_training_sample = [ee.FeatureCollection(f\"{path}/Invarient_ext_Img_NDBI_gte_5_{year}\")\n",
+    "Training_sample = [ee.FeatureCollection(f\"{path}/Invarient_ext_Img_NDBI_gte_5_{year}\")\n",
     "                               for year in year_name]"
    ]
   },
@@ -292,7 +292,7 @@
     "\n",
     "stack_year   = year_name \n",
     "stack_img    = Stack_img \n",
-    "stack_sample = Invarient_training_sample \n",
+    "stack_sample = Training_sample \n",
     "\n",
     "# stack all ingredients together\n",
     "Stack_img_sample = [(stack_name[i],stack_year[i],stack_img[i],stack_sample[i]) for i in range(num_invarient)]"
@@ -1704,7 +1704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
