--- a/Process_3_Temporal_Check/Step_1_Iteration_to_erase_unconsistent_pixel.ipynb
+++ b/Process_3_Temporal_Check/Step_1_Iteration_to_erase_unconsistent_pixel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the periods to perform temporal check\n",
     "Check_len = 3\n",
     "Check_wieght = [3,1,1]\n",
-    "Check_threshold = 3\n",
+    "Check_threshold = 4\n",
     "\n",
     "# define the number of iteration\n",
     "Check_iteration_num = 10"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        " '2017_2019']"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the classified_random_imgs and sum them up for each period\n",
     "Classified_imgs = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Random_{year}\")\n",
     "                     .sum()\n",
-    "                     .gte(8)\n",
+    "                     .gte(9)\n",
     "                     .set('name',year)\n",
     "                  for year in year_range]"
    ]
@@ -159,28 +159,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Temporal_check(in_tifs,weights,threshold):\n",
+    "def Temporal_check(mode,in_tifs,weights,threshold):\n",
+    "    \n",
+    "    # get the name of the first img as the property for return img\n",
+    "    name = in_tifs[0].get('name')\n",
     "\n",
     "    # zip classified_random_sum with weights\n",
     "    img_multiply = list(zip(in_tifs,weights))\n",
     "\n",
-    "    # multiply each classified_sum_img with check_weight \n",
-    "    # and sum 3-periods together\n",
-    "    sum_tif = ee.ImageCollection([i[0].multiply(i[1]) for i in img_multiply]).sum()\n",
     "    \n",
-    "    # thoes pixel that greater than threshold will be kept\n",
-    "    sum_constrained = sum_tif.gt(threshold)\n",
+    "    \n",
+    "    if mode == 'forward':\n",
+    "        \n",
+    "        # multiply each classified_sum_img with check_weight \n",
+    "        # and sum 3-periods together\n",
+    "        sum_tif = ee.ImageCollection([i[0].multiply(i[1]) for i in img_multiply]).sum()\n",
+    "        \n",
+    "        # thoes pixel that GREATER THAN are built-up pixel\n",
+    "        sum_constrained = sum_tif.gt(threshold).set('name',name)\n",
+    "        \n",
+    "    elif mode == 'backward':\n",
+    "                \n",
+    "        #_______________________Get theose pixel that was transformed from built to non-built______________\n",
+    "        \n",
+    "        # remap the last year, so the pixel value changed (built-->0; non-built -->weight)\n",
+    "        last_year_remap    = img_multiply[0][0].remap([0,1],[img_multiply[0][1],0])\n",
+    "        \n",
+    "        # multiply the reset img with weight\n",
+    "        sum_rest_img_multiply = ee.ImageCollection([i[0].multiply(i[1]) for i in img_multiply[1:]]).sum()\n",
+    "        \n",
+    "        # add sum_rest_img_multiply to last_year_remap, and theose pixel with value GREATER THAN threshold\n",
+    "        # are incorrectly classified as non-built, which should be corretd to built pixel\n",
+    "        Incorrect_non_built = sum_rest_img_multiply.add(last_year_remap)\\\n",
+    "                                                   .gt(threshold)\\\n",
+    "                                                   .remap([0,1],[0,2])\n",
+    "        \n",
+    "        # add Incorrect_non_built to the last year img, the built-pixel should have values of [1|2]\n",
+    "        sum_tif = Incorrect_non_built.add(img_multiply[0][0])\n",
+    "        \n",
+    "        # thoes pixel that LESS THAN are built-up pixel\n",
+    "        sum_constrained = sum_tif.eq(1).Or(sum_tif.eq(2))\n",
+    "    else:\n",
+    "        print(\"Please provide a correct mode ['forward'|'backward']\")\n",
     "    \n",
     "    return sum_constrained"
    ]
@@ -194,25 +218,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iter_tempral_check_instaces = {}\n",
-    "\n",
-    "for it in range(Check_iteration_num):\n",
+    "def Forward_backward(temporal_check_len,in_imgs):\n",
     "    \n",
-    "    if it == 0:\n",
-    "        chuncks   = [Classified_imgs[i:i+3] for i in range(len(Classified_imgs)-2)]\n",
-    "        check_tif = [Temporal_check(chunk,Check_wieght,Check_threshold) for chunk in chuncks]\n",
-    "        Iter_tempral_check_instaces[0]  = check_tif\n",
-    "        \n",
-    "    else:\n",
-    "        in_tifs   = Iter_tempral_check_instaces[0] + Classified_imgs[8:10]\n",
-    "        chuncks   = [in_tifs[i:i+3] for i in range(len(Classified_imgs)-2)]\n",
-    "        \n",
-    "        check_tif = [Temporal_check(chunk,Check_wieght,Check_threshold) for chunk in chuncks]\n",
-    "        Iter_tempral_check_instaces[it] = check_tif"
+    "    #_______________________________Forward temporal check________________________________________________\n",
+    "    \n",
+    "    forward_chunks  = [in_imgs[i:i + temporal_check_len] for i in range(len(in_imgs) - temporal_check_len + 1)]\n",
+    "    # perform the forward temporal check\n",
+    "    forward_tif     = [Temporal_check('forward',chunk,Check_wieght,Check_threshold) for chunk in forward_chunks]\n",
+    "    forwar_backward = forward_tif + Classified_imgs[len(forward_tif):]\n",
+    "    \n",
+    "    \n",
+    "#     #_______________________________Backward temporal check________________________________________________\n",
+    "    \n",
+    "#     # combie the forward_checked tifs with unchecked imgs in the tail, and reverse the list order\n",
+    "#     backward_tifs = forward_tif + Classified_imgs[len(forward_tif):]\n",
+    "#     backward_tifs_reverse = backward_tifs[::-1]\n",
+    " \n",
+    "#     # slice the backward_tifs into chunks with the length of temporal_check_len\n",
+    "#     backward_chunks = [backward_tifs_reverse[i:i + temporal_check_len] for i in range(len(in_imgs) - temporal_check_len + 1)]\n",
+    "#     # perform the backward temporal check\n",
+    "#     backward_tif    = [Temporal_check('backward',chunk,Check_wieght,Check_threshold) for chunk in backward_chunks]\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "#     #___________________________Add Forward % Backward checked img together___________________________________\n",
+    "    \n",
+    "#     # reorder the backward_tif so tifs to ensure an increased time order\n",
+    "#     re_order_tif = backward_tif[::-1]\n",
+    "    \n",
+    "#     forwar_backward = forward_tif[:temporal_check_len-1] + re_order_tif\n",
+    "    \n",
+    "    return forwar_backward"
    ]
   },
   {
@@ -224,103 +271,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Iter_temporal_check_instaces = {}\n",
+    "\n",
+    "for it in range(Check_iteration_num):\n",
+    "\n",
+    "    if it == 0:\n",
+    "        \n",
+    "        in_imgs = Classified_imgs\n",
+    "        \n",
+    "        forward_backward_checked =  Forward_backward(Check_len,in_imgs)\n",
+    "        forward_backward_with_iteration = [ee.Image(img).set('iteration',it) for img in forward_backward_checked]\n",
+    "        \n",
+    "        Iter_temporal_check_instaces[0]  = forward_backward_with_iteration\n",
+    "        \n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        in_imgs = Iter_temporal_check_instaces[it-1]\n",
+    "        \n",
+    "        forward_backward_checked =  Forward_backward(Check_len,in_imgs)\n",
+    "        forward_backward_with_iteration = [ee.Image(img).set('iteration',it) for img in forward_backward_checked]\n",
+    "        \n",
+    "        Iter_temporal_check_instaces[it]  = forward_backward_with_iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: [<ee.image.Image at 0x29eab952198>,\n",
-       "  <ee.image.Image at 0x29eab9523c8>,\n",
-       "  <ee.image.Image at 0x29eab952780>,\n",
-       "  <ee.image.Image at 0x29eab952080>,\n",
-       "  <ee.image.Image at 0x29eab952550>,\n",
-       "  <ee.image.Image at 0x29eab9524a8>,\n",
-       "  <ee.image.Image at 0x29eab952588>,\n",
-       "  <ee.image.Image at 0x29eab53d710>],\n",
-       " 1: [<ee.image.Image at 0x29eab53d550>,\n",
-       "  <ee.image.Image at 0x29eab53dcf8>,\n",
-       "  <ee.image.Image at 0x29eab53d6a0>,\n",
-       "  <ee.image.Image at 0x29eab53d208>,\n",
-       "  <ee.image.Image at 0x29eab53d4a8>,\n",
-       "  <ee.image.Image at 0x29eab53d5f8>,\n",
-       "  <ee.image.Image at 0x29eab42b4a8>,\n",
-       "  <ee.image.Image at 0x29eab42bb70>],\n",
-       " 2: [<ee.image.Image at 0x29eab40ce80>,\n",
-       "  <ee.image.Image at 0x29eab58cfd0>,\n",
-       "  <ee.image.Image at 0x29eab58c5f8>,\n",
-       "  <ee.image.Image at 0x29eaf982f28>,\n",
-       "  <ee.image.Image at 0x29eaf982940>,\n",
-       "  <ee.image.Image at 0x29eaf982b70>,\n",
-       "  <ee.image.Image at 0x29eab9105f8>,\n",
-       "  <ee.image.Image at 0x29eab910630>],\n",
-       " 3: [<ee.image.Image at 0x29eab9108d0>,\n",
-       "  <ee.image.Image at 0x29eab9104e0>,\n",
-       "  <ee.image.Image at 0x29eab910f28>,\n",
-       "  <ee.image.Image at 0x29eab9104a8>,\n",
-       "  <ee.image.Image at 0x29eab5ae780>,\n",
-       "  <ee.image.Image at 0x29eab5ae198>,\n",
-       "  <ee.image.Image at 0x29eab5aeb38>,\n",
-       "  <ee.image.Image at 0x29eafb591d0>],\n",
-       " 4: [<ee.image.Image at 0x29eafb59da0>,\n",
-       "  <ee.image.Image at 0x29eafb59c88>,\n",
-       "  <ee.image.Image at 0x29eafb59860>,\n",
-       "  <ee.image.Image at 0x29eafb59ba8>,\n",
-       "  <ee.image.Image at 0x29eac0594e0>,\n",
-       "  <ee.image.Image at 0x29eac0597f0>,\n",
-       "  <ee.image.Image at 0x29eac059780>,\n",
-       "  <ee.image.Image at 0x29eac0591d0>],\n",
-       " 5: [<ee.image.Image at 0x29eac059320>,\n",
-       "  <ee.image.Image at 0x29eac059828>,\n",
-       "  <ee.image.Image at 0x29eac059978>,\n",
-       "  <ee.image.Image at 0x29ea96d5828>,\n",
-       "  <ee.image.Image at 0x29eaba8a2b0>,\n",
-       "  <ee.image.Image at 0x29eaba8aef0>,\n",
-       "  <ee.image.Image at 0x29eaba8aba8>,\n",
-       "  <ee.image.Image at 0x29eaba8a438>],\n",
-       " 6: [<ee.image.Image at 0x29eac5f42b0>,\n",
-       "  <ee.image.Image at 0x29eac5f4278>,\n",
-       "  <ee.image.Image at 0x29eac5f4550>,\n",
-       "  <ee.image.Image at 0x29eac070dd8>,\n",
-       "  <ee.image.Image at 0x29eac070940>,\n",
-       "  <ee.image.Image at 0x29eac070e48>,\n",
-       "  <ee.image.Image at 0x29eac0707f0>,\n",
-       "  <ee.image.Image at 0x29eac0705c0>],\n",
-       " 7: [<ee.image.Image at 0x29eac070390>,\n",
-       "  <ee.image.Image at 0x29eac070160>,\n",
-       "  <ee.image.Image at 0x29eabb0b550>,\n",
-       "  <ee.image.Image at 0x29eabb0bc18>,\n",
-       "  <ee.image.Image at 0x29eabb0b278>,\n",
-       "  <ee.image.Image at 0x29eabb0b588>,\n",
-       "  <ee.image.Image at 0x29eabb0b0f0>,\n",
-       "  <ee.image.Image at 0x29eabb0be48>],\n",
-       " 8: [<ee.image.Image at 0x29eabb0bac8>,\n",
-       "  <ee.image.Image at 0x29eac067780>,\n",
-       "  <ee.image.Image at 0x29eac067278>,\n",
-       "  <ee.image.Image at 0x29eac067a90>,\n",
-       "  <ee.image.Image at 0x29eac0678d0>,\n",
-       "  <ee.image.Image at 0x29eac0679b0>,\n",
-       "  <ee.image.Image at 0x29eac0672b0>,\n",
-       "  <ee.image.Image at 0x29eabef50b8>],\n",
-       " 9: [<ee.image.Image at 0x29eabd15748>,\n",
-       "  <ee.image.Image at 0x29eabd157f0>,\n",
-       "  <ee.image.Image at 0x29eabd15da0>,\n",
-       "  <ee.image.Image at 0x29eabd150f0>,\n",
-       "  <ee.image.Image at 0x29eabd15358>,\n",
-       "  <ee.image.Image at 0x29eabd15978>,\n",
-       "  <ee.image.Image at 0x29eabd15668>,\n",
-       "  <ee.image.Image at 0x29eab8ce9b0>]}"
+       "{'type': 'Image',\n",
+       " 'bands': [{'id': 'b1',\n",
+       "   'data_type': {'type': 'PixelType', 'precision': 'int', 'min': 0, 'max': 1},\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [1, 0, 0, 0, 1, 0]}],\n",
+       " 'properties': {'name': '1990_1992', 'iteration': 9}}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Iter_tempral_check_instaces"
+    "Iter_temporal_check_instaces[9][0].getInfo()"
    ]
   },
   {
@@ -339,13 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30dd462c799341219cdcb3e21c059eae",
+       "model_id": "c48e74dc210c4062997d271b04e6ab52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,11 +384,17 @@
     "Map.setCenter(115.4508, 35.2492,10)\n",
     "\n",
     "Map.add_basemap('HYBRID')\n",
-    "Map.addLayer(Classified_imgs[9] ,{'min':0,'max':1},'origin')\n",
-    "Map.addLayer(Iter_tempral_check_instaces[0][1] ,{'min':0,'max':1},'Iter_0')\n",
-    "Map.addLayer(Iter_tempral_check_instaces[3][1] ,{'min':0,'max':1},'Iter_3')\n",
-    "Map.addLayer(Iter_tempral_check_instaces[5][1] ,{'min':0,'max':1},'Iter_5')\n",
-    "Map.addLayer(Iter_tempral_check_instaces[9][1] ,{'min':0,'max':1},'Iter_9')\n",
+    "Map.addLayer(Classified_imgs[3] ,{'min':0,'max':1},'origin')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[1][3] ,{'min':0,'max':1},'Iter_1')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[2][3] ,{'min':0,'max':1},'Iter_2')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[3][3] ,{'min':0,'max':1},'Iter_3')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[4][3] ,{'min':0,'max':1},'Iter_4')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[5][3] ,{'min':0,'max':1},'Iter_5')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[6][3] ,{'min':0,'max':1},'Iter_6')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[7][3] ,{'min':0,'max':1},'Iter_7')\n",
+    "Map.addLayer(Iter_temporal_check_instaces[8][3] ,{'min':0,'max':1},'Iter_8')\n",
+    "\n",
+    "\n",
     "Map"
    ]
   },
