using control points

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
@@ -48,10 +48,10 @@
     "        ('Fourier_Mean',<FeatureCollection with {Fourier and Mean_nomalized} values>)\n",
     "        ('Landsat_Fourier_Mean',<FeatureCollection with {Landsat_Fourier_Mean} values>)]\n",
     "                                        \n",
-    "    function_3--> Create sample_classificaiton instances (aka, classified sample point) without computation in GEE\n",
+    "    function_3--> Create sample_classificaiton instances (aka, classified sample point) without actual computation in GEE\n",
     "      Note: need to from Class_2_Classify_Fourier_Img import Classification first to use this funcion\n",
     "      In this function,:\n",
-    "      1) the input {verified_pt} will be split into a 7/3 partition, the\n",
+    "      1) the input {verified_pt} will be split into a 7/3 partition, then\n",
     "      2) create a classifier (hidden in the Classificaiton class) from the 7 portion, and\n",
     "      3) use the classsifier to classify the left 3 portion of sample points and ,\n",
     "      4) return the classified sample with multiindex of (year,combo_name,percent,tree)\n",
@@ -62,43 +62,39 @@
     "    percent_value = [0,1,2,3,5,7,10,20,30,50,70,100]\n",
     "    tree_num      = [1] + list(range(10,121,10))\n",
     "\n",
-    "    # define the path to point_with_value GEE-Path\n",
-    "    path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
+    "    # define the path to point_with_img_value \n",
+    "    path = 'users/wangjinzhulala/North_China_Plain_Python/Sample_extract_img'\n",
     "\n",
     "    # instantiate the combo_instance dictionary\n",
     "    Combo_instance_with_village = {}\n",
     "\n",
     "    # Create sample_classification instances through [year] --> [Percent] --> [band_combination] --> [Tree]\n",
     "    for year in year_name:\n",
-    "\n",
-    "        # import samples\n",
-    "        Verified_sample = ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\\\n",
-    "                            .filterMetadata('Built', 'equals', 0)\n",
-    "        Village_sample  = ee.FeatureCollection(f'{path}/Village_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
-    "\n",
-    "        # make sure they are the same size.\n",
-    "        min_size = min(Verified_sample.size().getInfo(),Village_sample.size().getInfo())\n",
-    "        Verified_sample = Verified_sample.randomColumn('z', 101).limit(min_size,'z')\n",
-    "        Village_sample  = Village_sample.randomColumn('z', 101).limit(min_size,'z')\n",
-    "\n",
-    "        for pct in percent_reduction:\n",
-    "\n",
-    "            # Create percentage_reduced samples, only use non-built points from verified points\n",
-    "            Subset_verified_sample  = Make_Sample_Classification.Step_1_Subset_sample(Verified_sample,pct)\n",
-    "            Subset_village_sample   = Make_Sample_Classification.Step_1_Subset_sample(Village_sample,pct)\n",
-    "\n",
-    "            # Merge Verified_points with Zone_points\n",
-    "            Sample_merge = Subset_verified_sample.merge(Subset_village_sample)\n",
-    "\n",
-    "            # Get the band_combo names\n",
-    "            Band_combo   = Make_Sample_Classification.Step_2_Create_Band_Combo(Sample_merge)\n",
-    "\n",
-    "            for combo in Band_combo:\n",
-    "                Accuracy_instance = Make_Sample_Classification.\\\n",
-    "                                    Step_3_Create_Classification_Instance(year,Sample_merge,\n",
-    "                                                                          combo,tree_num,\n",
-    "                                                                          pct,classificaiton_func = Classification ) \n",
-    "                Combo_instance_with_village.update(Accuracy_instance)\n",
+    "    \n",
+    "    Invarient_sample = ee.FeatureCollection(f'{path}/Control_sample_ext_img_{year}')\n",
+    "    \n",
+    "    # import samples\n",
+    "    Invarient_built      = Invarient_sample.filterMetadata('Built','equals',1)\n",
+    "    Invarient_non_Built  = Invarient_sample.filterMetadata('Built','equals',0)\n",
+    "       \n",
+    "    for pct in percent_value:\n",
+    "        \n",
+    "        # Create percentage_reduced samples, only use non-built points from verified points\n",
+    "        Subset_Invarient_built     = Make_Sample_Classification.Step_1_Subset_sample(Invarient_built,pct)\n",
+    "        Subset_Invarient_non_Built = Make_Sample_Classification.Step_1_Subset_sample(Invarient_non_Built,pct)\n",
+    "        \n",
+    "        # Merge the built and non-built points that been percentage reduced\n",
+    "        Sample_merge = Subset_Invarient_built.merge(Subset_Invarient_non_Built)\n",
+    "        \n",
+    "        # Get the band_combo names\n",
+    "        Band_combo   = Make_Sample_Classification.Step_2_Create_Band_Combo(Sample_merge)\n",
+    "        \n",
+    "        for combo in Band_combo:\n",
+    "            Accuracy_instance = Make_Sample_Classification.\\\n",
+    "                                Step_3_Create_Classification_Instance(year,Sample_merge,\n",
+    "                                                                      combo,tree_num,\n",
+    "                                                                      pct,classificaiton_func = Classification ) \n",
+    "            Combo_instance_with_village.update(Accuracy_instance)\n",
     "    \n",
     "    '''\n",
     "    \n",
@@ -145,9 +141,9 @@
     "                            Landsat_band + Mean_Normalized,\n",
     "                            Fourier_band + Mean_Normalized,\n",
     "                            Landsat_band + Fourier_band + Mean_Normalized,\n",
-    "                            Landsat_band + Fourier_band + Climate_band,\n",
-    "                            Landsat_band + Fourier_band + Terrain_band,\n",
-    "                            Landsat_band + Fourier_band + Climate_band + Terrain_band]\n",
+    "                            Landsat_band + Fourier_band + Mean_Normalized + Climate_band,\n",
+    "                            Landsat_band + Fourier_band + Mean_Normalized + Terrain_band,\n",
+    "                            Landsat_band + Fourier_band + Mean_Normalized + Climate_band + Terrain_band]\n",
     "\n",
     "        # create comno_names\n",
     "        global combination_name\n",
@@ -157,9 +153,9 @@
     "                            'Landsat_Mean',\n",
     "                            'Fourier_Mean',\n",
     "                            'Landsat_Fourier_Mean',\n",
-    "                            'Landsat_Fourier_Climate',\n",
-    "                            'Landsat_Fourier_Terrain',\n",
-    "                            'Landsat_Fourier_Terrain_Climate']\n",
+    "                            'Landsat_Fourier_Mean_Climate',\n",
+    "                            'Landsat_Fourier_Mean_Terrain',\n",
+    "                            'Landsat_Fourier_Mean_Terrain_Climate']\n",
     "\n",
     "\n",
     "        return list(zip(combination_name,band_combination))\n",
@@ -230,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
